zluda_bindgen/build/cublasLt_internal.h

    undefined8 cublasLtLegacyGemmSSS(undefined8 param_1,undefined8 param_2,int *param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined4 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined4 param_13,undefined4 param_14,undefined8 param_15,undefined4 param_16,undefined4 param_17,undefined8 param_18,undefined4 param_19,undefined4 param_20,undefined4 param_21,undefined4 param_22,undefined4 param_23,undefined1 param_24,undefined8 param_25,undefined8 param_26,undefined8 param_27);
    undefined8 cublasLtLegacyGemmTSS(undefined8 param_1,undefined8 param_2,int *param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined4 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined4 param_13,undefined4 param_14,undefined8 param_15,undefined4 param_16,undefined4 param_17,undefined8 param_18,undefined4 param_19,undefined4 param_20,undefined4 param_21,undefined4 param_22,undefined4 param_23,undefined1 param_24,undefined8 param_25,undefined8 param_26,undefined8 param_27);
    undefined8 cublasLtLegacyGemmTST(undefined8 param_1,undefined8 param_2,int *param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined4 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined4 param_13,undefined4 param_14,undefined8 param_15,undefined4 param_16,undefined4 param_17,undefined8 param_18,undefined4 param_19,undefined4 param_20,undefined4 param_21,undefined4 param_22,undefined4 param_23,undefined1 param_24,undefined8 param_25,undefined8 param_26,undefined8 param_27);
    undefined8 cublasLtLegacyGemmZZZ(undefined8 param_1,undefined8 param_2,int *param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined4 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined4 param_13,undefined4 param_14,undefined8 param_15,undefined4 param_16,undefined4 param_17,undefined8 param_18,undefined4 param_19,undefined4 param_20,undefined4 param_21,undefined4 param_22,undefined4 param_23,undefined1 param_24,undefined8 param_25,undefined8 param_26,undefined8 param_27);
    void cublasLtLegacyGemmUtilizationZZZ(undefined8 param_1,undefined4 param_2,undefined4 param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined4 param_9,undefined4 param_10,undefined4 param_11,undefined8 param_12,undefined8 param_13);
    undefined4 cublasLtAlgoCharacteristicGetAttribute(undefined8 param_1,long param_2,int param_3,int param_4,int param_5,undefined8 param_6,undefined8 param_7,undefined8 param_8);
    undefined8 cublasLtMatmulAlgoConfigGetAttributeRange(void);
    undefined8 cublasLtHHHMatmulAlgoGetIds(undefined8 param_1,undefined4 param_2,undefined4 param_3,int param_4,int param_5,uint param_6,uint param_7,int param_8,long param_9,int *param_10);
    undefined4 cublasLtHHHMatmulAlgoInit(undefined8 param_1,undefined4 param_2,undefined4 param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined8 param_9);
    undefined4 cublasLtHHHMatmulAlgoCapGetAttribute(undefined8 param_1,undefined4 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5);
    undefined4 cublasLtHHHMatmul(undefined8 param_1,undefined8 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5,undefined8 param_6,undefined8 param_7,undefined8 param_8,undefined8 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined8 param_13,undefined8 param_14,undefined8 param_15,undefined8 param_16);
    undefined4 cublasLtHHHMatmulAlgoCheck(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 param_7,undefined8 param_8);
    undefined4 cublasLtHHHMatmulAlgoGetHeuristic(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 *param_7,undefined4 param_8,undefined8 param_9,undefined8 param_10);
    undefined8 cublasLtHSHMatmulAlgoGetIds(undefined8 param_1,undefined4 param_2,undefined4 param_3,int param_4,int param_5,uint param_6,uint param_7,int param_8,long param_9,int *param_10);
    undefined4 cublasLtHSHMatmulAlgoInit(undefined8 param_1,undefined4 param_2,undefined4 param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined8 param_9);
    undefined4 cublasLtHSHMatmulAlgoCapGetAttribute(undefined8 param_1,undefined4 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5);
    undefined4 cublasLtHSHMatmul(undefined8 param_1,undefined8 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5,undefined8 param_6,undefined8 param_7,undefined8 param_8,undefined8 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined8 param_13,undefined8 param_14,undefined8 param_15,undefined8 param_16);
    undefined4 cublasLtHSHMatmulAlgoCheck(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 param_7,undefined8 param_8);
    undefined4 cublasLtHSHMatmulAlgoGetHeuristic(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 *param_7,undefined4 param_8,undefined8 param_9,undefined8 param_10);